Changed from Maven task in example DSL script to script task