@@ -6,11 +6,12 @@ project(key: 'MYPROJECT', name: 'My project') {
 
             job(key: 'BUILD', name: 'Maven build job' ) {
                 tasks {
-                    maven3x(goal: 'install') {
-                        description 'build plug-in'
-                        executable 'maven323'
-                        buildJdk 'jdk8'
-                        environmentVariables 'MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"'
+                    script() {
+                        description 'echo hello world'
+                        inline {
+                            interpreter ScriptInterpreter.LEGACY_SH_BAT
+                            scriptBody 'echo "Hello World"'
+                        }
                     }
                 }
             }
